# pyrser

./: README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
core/extractors/: base_extractor.py  llama_index_extractor.py
core/parsers/: base_parser.py  static_html_parser.py
src/pyrser/core/extractors/: llama_index_extractor.py
src/pyrser/core/parsers/: base_parser.py  static_html_parser.py
src/pyrser_ai/: __init__.py
src/pyrser_ai/core/extractors/: llama_index_extractor.py
src/pyrser_ai/core/extractors/prompts/: html_parser_prompt.txt
src/pyrser_ai/core/parsers/: base_parser.py  dynamic_html_parser.py  static_html_parser.py
src/pyrser_ai/core/parsers/file/: file_parser.py
src/pyrser_ai/core/parsers/html/: base_html_parser.py  dynamic_html_parser.py  exceptions.py  static_html_parser.py
src/pyrser_ai/core/readers/: __init__.py  base_reader.py  exceptions.py  llama_parse_reader.py
tests/parsers/: test_base_parser.py  test_static_html_parser.py
