[project]
name = "pyrser-ai"
version = "0.1.1"
description = "Turn any HTML page into a pydantic object"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.10.10",
    "beautifulsoup4>=4.12.3",
    "fake-useragent>=1.5.1",
    "llama-index>=0.11.23",
    "lxml>=5.3.0",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
full = [
    "playwright>=1.48.0",
]

[dependency-groups]
dev = [
    "aresponses>=3.0.0",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["src/pyrser_ai"]
